Before removing JdbcExecutionResult